[package]
name = "clickward"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.86"
camino = { version = "1.1.7", features = ["serde1"] }
clap = { version = "4.5", features = ["cargo", "derive", "env", "wrap_help"] }
derive_more = "0.99.18"
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
